# TickCapture

./: CMakeLists.txt  README.md  logs.txt
benchmarks/: CMakeLists.txt  benchmark_main.cpp  market_data_simulator.cpp  market_data_simulator.hpp
cmake/: FindDPDK.cmake  FindZeroMQ.cmake
include/tick_capture/: types.hpp
logs/: 1000-10.txt  10000-30.txt  2000-10.txt  5000-30.txt
src/: CMakeLists.txt
src/capture/: packet_capture.cpp  packet_capture.hpp  ring_buffer.hpp
src/network/: coordinator.cpp  coordinator.hpp
src/node/: capture_node.cpp  capture_node.hpp
src/storage/: tick_storage.cpp  tick_storage.hpp
tools/: CMakeLists.txt
